--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://irregulaar.vercel.app/" />
+    <meta property="og:url" content="https://irregulaaar.vercel.app/" />
     <meta property="og:title" content="Kevin Sanchez - Frontend Developer" />
     <meta
       property="og:description"
@@ -18,13 +18,13 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://irregulaar.vercel.app/" />
+    <meta property="twitter:url" content="https://irregulaaar.vercel.app/" />
     <meta property="twitter:title" content="Kevin Sanchez - Frontend Developer" />
     <meta
       property="twitter:description"
       content="Personal portfolio of Kevin Sanchez, frontend developer with experience in React, JavaScript and more."
     />
-    <meta property="twitter:image" content="https://irregulaar.vercel.app/preview.webp" />
+    <meta property="twitter:image" content="https://irregulaaar.vercel.app/preview.webp" />
   </head>
   <body>
     <div id="root"></div>
