Fix typo in Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       property="og:description"
       content="Personal portfolio of Kevin Sanchez, frontend developer with experience in React, JavaScript and more."
     />
-    <meta property="og:image" content="https://irregulaar.vercel.app/preview.webp" />
+    <meta property="og:image" content="https://irregulaaar.vercel.app/preview.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
