Update index.html to change language and translate meta tags to Spanish

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kevin's portfolio</title>
+    <title>Portafolio de Kevin</title>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://irregulaaar.vercel.app/" />
-    <meta property="og:title" content="Kevin Sanchez - Frontend Developer" />
+    <meta property="og:title" content="Kevin Sanchez - Desarrollador Frontend" />
     <meta
       property="og:description"
-      content="Personal portfolio of Kevin Sanchez, frontend developer with experience in React, JavaScript and more."
+      content="Portafolio personal de Kevin Sanchez, desarrollador frontend con experiencia en React, JavaScript y más."
     />
     <meta property="og:image" content="https://irregulaaar.vercel.app/preview.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://irregulaaar.vercel.app/" />
-    <meta property="twitter:title" content="Kevin Sanchez - Frontend Developer" />
+    <meta property="twitter:title" content="Kevin Sanchez - Desarrollador Frontend" />
     <meta
       property="twitter:description"
-      content="Personal portfolio of Kevin Sanchez, frontend developer with experience in React, JavaScript and more."
+      content="Portafolio personal de Kevin Sanchez, desarrollador frontend con experiencia en React, JavaScript y más."
     />
     <meta property="twitter:image" content="https://irregulaaar.vercel.app/preview.webp" />
   </head>
