--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portafolio personal de Kevin Sanchez, desarrollador frontend con experiencia en React, JavaScript y más."
+    />
     <title>Portafolio de Kevin</title>
 
     <!-- Open Graph / Facebook -->
@@ -25,6 +29,8 @@
       content="Portafolio personal de Kevin Sanchez, desarrollador frontend con experiencia en React, JavaScript y más."
     />
     <meta property="twitter:image" content="https://irregulaaar.vercel.app/preview.webp" />
+
+    <link rel="preload" href="/fonts/false.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   </head>
   <body>
     <div id="root"></div>
